--- a/src/styles.css
+++ b/src/styles.css
@@ -1,18 +1,127 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Tangerine&family=Montserrat&display=swap');
+
+* {
+    box-sizing: border-box;
     margin: 0;
 }
-
-.title {
-    color: red;
-}
-.paragraph {
-    color: blue;
+body {
+    background: url("../src/image.jpg") no-repeat center fixed;
+    background-size: cover;
+    height: 100%;
+    min-height: 100%;
+    font-family: "Montserrat", cursive;
 }
 .header {
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.9);
+    height: 35vh;
+    border-bottom: solid #515152 1px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-content: center;
+    align-items: center;
+}
+.title {
+font-family: "Tangerine", cursive;
+ font-weight: normal;
+    color: white;
+    font-size: 20vh;
+    margin-top: 5vh;
+}
+.buttonsDiv {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-content: center;
+    align-items: center;
+    margin-bottom: 5vh;
+}
+.inicioButton {
+    background:rgba(0, 0, 0, 0);
+    color: white;
+    font-size: 4vh;
+    font-family: "Montserrat", cursive;
+    border: none;
+    padding-left: 2vw;
+    padding-right: 2vw;
+    width: auto;
+    height: 10vh;
+    margin-right: 5vw;
+    transition: transform 0.3s;
+}
+.inicioButton:hover {
+    transform: translateY(-6px);
+    transition: transform 0.3s;
+}
+.menuButton {
+    background:rgba(0, 0, 0, 0);
+    color: white;
+    font-size: 4vh;
+    font-family: "Montserrat", cursive;
+    border: none;
+    border-bottom: solid white 2px;
+    padding-left: 2vw;
+    padding-right: 2vw;
+    width: auto;
+    height: 10vh;
+    margin-right: 5vw;
+    transition: transform 0.3s;
+}
+.menuButton:hover {
+    transform: translateY(-6px);
+    transition: transform 0.3s;
+}
+.menu {
+    visibility: visible;
+    color: white;
+    transition: 5s;
+}
+.contactButton {
+    background:rgba(0, 0, 0, 0);
+    color: white;
+    font-size: 4vh;
+    font-family: "Montserrat", cursive;
+    border: none;
+    border-bottom: solid white 2px;
+    padding-left: 2vw;
+    padding-right: 2vw;
+    width: auto;
+    height: 10vh;
+    transition: transform 0.3s;
+}
+.contactButton:hover {
+    transform: translateY(-6px);
+    transition: transform 0.3s;
+}
+.contacts {
+  animation: fadeIn 2s;
+}
+@keyframes fadeIn {
+    0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+.dynamicZone {
+    background-color: rgba(0, 0, 0, 0.7);
+    color: rgba(0, 0, 0, 0);
+    /*display: flex;
+    justify-content: center;*/
+    position : relative;
+    border: solid #515152 1px;
+    width: 50vw;
+    left : 25vw;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
+    min-height: 90vh;
+    color: white;
 }
 .footer {
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.7);
+    border-top: solid #515152 1px;
+    height: 10vh;
+    position : relative;
+    width: 100%; 
+    bottom : 0px;
 }
 .footerContent {
     color: white;
