--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
     margin: 0;
 }
+@keyframes fadeIn {
+    0% {opacity:0;}
+  100% {opacity:1;}
+}
 body {
     background: url("../src/image.jpg") no-repeat center fixed;
     background-size: cover;
@@ -94,11 +98,20 @@ font-family: "Tangerine", cursive;
     transition: transform 0.3s;
 }
 .contacts {
-  animation: fadeIn 2s;
+    animation: fadeIn 2s;
+    margin: 5%;
 }
-@keyframes fadeIn {
-    0% {opacity:0;}
-  100% {opacity:1;}
+.telefono {
+  font-size: 4vh;
+  margin-bottom: 5%;
+}
+.direccion {
+    font-size: 4vh;
+    margin-bottom: 5%;
+}
+.googleMap {
+    width: 100%;
+    height: 400px;
 }
 
 .dynamicZone {
