--- a/src/styles.css
+++ b/src/styles.css
@@ -43,7 +43,8 @@ font-family: "Tangerine", cursive;
 .inicioButton {
     background:rgba(0, 0, 0, 0);
     color: white;
-    font-size: 4vh;
+    font-size: 3.5vh;
+    font-weight: 100;
     font-family: "Montserrat", cursive;
     border: none;
     padding-left: 2vw;
@@ -52,15 +53,45 @@ font-family: "Tangerine", cursive;
     height: 10vh;
     margin-right: 5vw;
     transition: transform 0.3s;
+    cursor: pointer;
 }
 .inicioButton:hover {
     transform: translateY(-6px);
     transition: transform 0.3s;
 }
+.inicio {
+    animation: fadeIn 2s;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 4vh;
+    margin: 5%;
+}
+.image {
+    border-radius: 50%;
+    width: 75%;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
+    height: 75%;
+}
+.firstParagraph {
+    text-align:center;
+    width: 100%;
+    margin-bottom: 5vh;
+}
+
+.secondParagraph {
+    text-align:center;
+    width: 100%;
+}
+.thirdParagraph {
+    text-align:center;
+    width: 100%;
+}
 .menuButton {
     background:rgba(0, 0, 0, 0);
     color: white;
-    font-size: 4vh;
+    font-size: 3.5vh;
     font-family: "Montserrat", cursive;
     border: none;
     border-bottom: solid white 2px;
@@ -69,6 +100,7 @@ font-family: "Tangerine", cursive;
     width: auto;
     height: 10vh;
     margin-right: 5vw;
+    cursor: pointer;
     transition: transform 0.3s;
 }
 .menuButton:hover {
@@ -76,14 +108,17 @@ font-family: "Tangerine", cursive;
     transition: transform 0.3s;
 }
 .menu {
-    visibility: visible;
-    color: white;
-    transition: 5s;
+    animation: fadeIn 2s;
+    margin: 5vh;
+    width: 90%;
+    height: auto;
+    cursor: pointer;
 }
+
 .contactButton {
     background:rgba(0, 0, 0, 0);
     color: white;
-    font-size: 4vh;
+    font-size: 3.5vh;
     font-family: "Montserrat", cursive;
     border: none;
     border-bottom: solid white 2px;
@@ -92,6 +127,7 @@ font-family: "Tangerine", cursive;
     width: auto;
     height: 10vh;
     transition: transform 0.3s;
+    cursor: pointer;
 }
 .contactButton:hover {
     transform: translateY(-6px);
@@ -99,14 +135,13 @@ font-family: "Tangerine", cursive;
 }
 .contacts {
     animation: fadeIn 2s;
+    font-size: 4vh;
     margin: 5%;
 }
 .telefono {
-  font-size: 4vh;
   margin-bottom: 5%;
 }
 .direccion {
-    font-size: 4vh;
     margin-bottom: 5%;
 }
 .googleMap {
@@ -123,9 +158,9 @@ font-family: "Tangerine", cursive;
     border: solid #515152 1px;
     width: 50vw;
     left : 25vw;
+    min-height: 100%;
     margin-top: 5vh;
     margin-bottom: 5vh;
-    min-height: 90vh;
     color: white;
 }
 .footer {
@@ -137,5 +172,26 @@ font-family: "Tangerine", cursive;
     bottom : 0px;
 }
 .footerContent {
+    max-width: 100%;
+    max-height: 100%;
+    display: flex;
     color: white;
+    justify-content: center;
+    align-items: flex-end;
+}
+.github {
+    height: 1.5em;
+    height: 1.5em;
+    margin-left: 1vh;
+    margin-top: 2vh;
+    cursor: pointer;
+}
+.github:hover {
+    opacity: 0.5;
+}
+@media only screen and (max-width: 700px) {
+    .dynamicZone {
+        width: 100%;
+        left : 0;
+    }
 }
