--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
   100% {opacity:1;}
 }
 body {
-    background: url("../src/image.jpg") no-repeat center fixed;
+    background: url("img/image.jpg") no-repeat center fixed;
     background-size: cover;
     height: 100%;
     min-height: 100%;
