--- a/styles.css
+++ b/styles.css
@@ -194,4 +194,7 @@ font-family: "Tangerine", cursive;
         width: 100%;
         left : 0;
     }
+        body {
+        background: url("img/image.jpg") no-repeat center scroll;
+    }
 }
